Melhora layout responsivo mobile e adiciona alertas Stop Loss/Win

--- a/app.html
+++ b/app.html
@@ -855,8 +855,22 @@
         .plan-row {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             padding: 12px 0;
             border-bottom: 1px solid rgba(212, 175, 55, 0.3);
+            gap: 15px;
+            flex-wrap: wrap;
+        }
+
+        .plan-row > span:first-child {
+            flex: 1;
+            min-width: 150px;
+            font-size: 0.95em;
+        }
+
+        .plan-row > span:last-child {
+            text-align: right;
+            white-space: nowrap;
         }
 
         .plan-row:last-child {
@@ -976,6 +990,120 @@
             color: white;
         }
 
+        /* Stop Loss/Win Modals */
+        .stop-modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.85);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            animation: fadeIn 0.3s ease;
+            backdrop-filter: blur(5px);
+        }
+
+        .stop-modal-content {
+            background: linear-gradient(135deg, var(--dark-green) 0%, var(--deep-green) 100%);
+            border: 3px solid var(--primary-gold);
+            border-radius: 20px;
+            padding: 40px;
+            max-width: 500px;
+            width: 90%;
+            text-align: center;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+            animation: scaleIn 0.3s ease;
+        }
+
+        .stop-loss-modal .stop-modal-content {
+            border-color: var(--danger);
+        }
+
+        .stop-win-modal .stop-modal-content {
+            border-color: var(--success);
+        }
+
+        .stop-modal-icon {
+            font-size: 5em;
+            margin-bottom: 20px;
+            animation: pulse 1.5s infinite;
+        }
+
+        .stop-modal h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+            color: var(--primary-gold);
+        }
+
+        .stop-loss-modal h2 {
+            color: var(--danger);
+        }
+
+        .stop-win-modal h2 {
+            color: var(--success);
+        }
+
+        .stop-modal-value {
+            font-size: 2.5em;
+            font-weight: bold;
+            margin-bottom: 15px;
+            color: var(--light-gold);
+        }
+
+        .stop-modal-message {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+            color: var(--light-gold);
+            opacity: 0.9;
+        }
+
+        .stop-modal-btn {
+            background: var(--primary-gold);
+            color: var(--deep-green);
+            border: none;
+            padding: 15px 50px;
+            font-size: 1.2em;
+            font-weight: bold;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .stop-modal-btn:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 20px rgba(212, 175, 55, 0.5);
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        @keyframes scaleIn {
+            from { 
+                transform: scale(0.7);
+                opacity: 0;
+            }
+            to { 
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        @keyframes pulse {
+            0%, 100% { 
+                transform: scale(1);
+                opacity: 1;
+            }
+            50% { 
+                transform: scale(1.1);
+                opacity: 0.8;
+            }
+        }
+
         /* Settings Panel */
         .settings-panel {
             display: none;
@@ -988,8 +1116,12 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+
             .balance-amount {
-                font-size: 2.5em;
+                font-size: 2.2em;
             }
 
             .stats-grid {
@@ -997,8 +1129,75 @@
             }
 
             .nav-tab {
-                font-size: 0.65em;
+                font-size: 0.7em;
+                padding: 12px 8px;
+            }
+
+            .plan-row {
+                padding: 10px 0;
+                gap: 10px;
+            }
+
+            .plan-row > span:first-child {
+                font-size: 0.85em;
+                min-width: 120px;
+            }
+
+            .plan-row > span:last-child {
+                font-size: 0.95em;
+            }
+
+            .card {
+                padding: 15px;
+            }
+
+            h2 {
+                font-size: 1.3em;
+            }
+
+            .stop-modal-content {
+                padding: 25px;
+                width: 95%;
+            }
+
+            .stop-modal h2 {
+                font-size: 1.5em;
+            }
+
+            .stop-modal-value {
+                font-size: 1.8em;
+            }
+
+            .stop-modal-message {
+                font-size: 1em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .balance-amount {
+                font-size: 1.8em;
+            }
+
+            .nav-tab {
+                font-size: 0.6em;
                 padding: 10px 5px;
+            }
+
+            .plan-row > span:first-child {
+                font-size: 0.8em;
+                min-width: 100px;
+            }
+
+            .plan-row > span:last-child {
+                font-size: 0.9em;
+            }
+
+            .header-title h1 {
+                font-size: 1.3em;
+            }
+
+            .header-subtitle {
+                font-size: 0.7em;
             }
         }
 
