Adiciona botão para registrar empate com recuperação parcial

--- a/app.html
+++ b/app.html
@@ -1377,6 +1377,13 @@
                         ❌ PERDEU
                     </button>
                 </div>
+                
+                <!-- Botão adicional para Empate com recuperação -->
+                <div id="tieRecoveryButton" style="display: none; margin-top: 10px;">
+                    <button class="result-btn" style="background: linear-gradient(135deg, #FFA500 0%, #FF8C00 100%); border: 2px solid #FFD700;" onclick="recordBet('TIE_RECOVERY')">
+                        🎲 EMPATE GANHOU (Player/Banker Perdeu)
+                    </button>
+                </div>
             </div>
 
             <!-- Initial Setup -->
