Move aba Jogo para primeira posição

--- a/app.html
+++ b/app.html
@@ -1268,13 +1268,13 @@
 
         <!-- Navigation -->
         <div class="nav-tabs">
-            <button class="nav-tab active" onclick="showTab('bet')">
-                <span class="nav-tab-icon">👑</span>
-                <span>Apostar</span>
-            </button>
-            <button class="nav-tab" onclick="showTab('live')">
+            <button class="nav-tab active" onclick="showTab('live')">
                 <span class="nav-tab-icon">🎮</span>
                 <span>Jogo</span>
+            </button>
+            <button class="nav-tab" onclick="showTab('bet')">
+                <span class="nav-tab-icon">👑</span>
+                <span>Apostar</span>
             </button>
             <button class="nav-tab" onclick="showTab('history')">
                 <span class="nav-tab-icon">📜</span>
