Remove localhost API URL configuration UI - Cloud API is now hardcoded in app.js

--- a/app.html
+++ b/app.html
@@ -1324,8 +1324,8 @@
                     <div id="signalHistory" style="max-height: 200px; overflow-y: auto;"></div>
                 </div>
                 
-                <!-- API Config -->
-                <div style="padding: 15px; background: rgba(13, 13, 13, 0.3);">
+                <!-- API Config (DISABLED - Cloud API hardcoded in app.js) -->
+                <!--
                     <label style="display: block; margin-bottom: 10px; color: var(--light-gold); font-weight: bold;">
                         🔗 URL da API (deixe em branco para localhost:5000)
                     </label>
@@ -1343,7 +1343,7 @@
                         </button>
                     </div>
                     <div id="apiStatus" style="margin-top: 10px; padding: 10px; border-radius: 8px; text-align: center; font-weight: bold;"></div>
-                </div>
+                -->
             </div>
         </div>
 
