--- a/app.html
+++ b/app.html
@@ -1298,8 +1298,8 @@
         <!-- Balance Card (moved to individual sections) -->
         <!--
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" id="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" id="profitDisplay"></div>
+            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
+            <div class="balance-profit" class="profitDisplay"></div>
         </div>
         -->
         <!-- Live Game Section -->
@@ -1360,8 +1360,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" id="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" id="profitDisplay"></div>
+            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
+            <div class="balance-profit" class="profitDisplay"></div>
         </div>
 
             <!-- Amount -->
@@ -1485,8 +1485,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" id="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" id="profitDisplay"></div>
+            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
+            <div class="balance-profit" class="profitDisplay"></div>
         </div>
 
             <div class="card">
@@ -1513,8 +1513,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" id="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" id="profitDisplay"></div>
+            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
+            <div class="balance-profit" class="profitDisplay"></div>
         </div>
 
             <div class="card">
@@ -1583,8 +1583,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" id="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" id="profitDisplay"></div>
+            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
+            <div class="balance-profit" class="profitDisplay"></div>
         </div>
 
             <div class="card">
@@ -1623,8 +1623,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" id="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" id="profitDisplay"></div>
+            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
+            <div class="balance-profit" class="profitDisplay"></div>
         </div>
 
             <div class="card">
