Fix duplicate class attributes - merge into single class attribute

--- a/app.html
+++ b/app.html
@@ -1293,8 +1293,8 @@
         <!-- Balance Card (moved to individual sections) -->
         <!--
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" class="profitDisplay"></div>
+            <div class="balance-amount currentBalance">R$ 0,00</div>
+            <div class="balance-profit profitDisplay"></div>
         </div>
         -->
         <!-- Navigation -->
@@ -1383,8 +1383,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" class="profitDisplay"></div>
+            <div class="balance-amount currentBalance">R$ 0,00</div>
+            <div class="balance-profit profitDisplay"></div>
         </div>
 
             <!-- Amount -->
@@ -1508,8 +1508,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" class="profitDisplay"></div>
+            <div class="balance-amount currentBalance">R$ 0,00</div>
+            <div class="balance-profit profitDisplay"></div>
         </div>
 
             <div class="card">
@@ -1536,8 +1536,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" class="profitDisplay"></div>
+            <div class="balance-amount currentBalance">R$ 0,00</div>
+            <div class="balance-profit profitDisplay"></div>
         </div>
 
             <div class="card">
@@ -1606,8 +1606,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" class="profitDisplay"></div>
+            <div class="balance-amount currentBalance">R$ 0,00</div>
+            <div class="balance-profit profitDisplay"></div>
         </div>
 
             <div class="card">
@@ -1646,8 +1646,8 @@
         <!-- Balance Card -->
         <div class="balance-card">
             <div class="balance-label">Banca Atual</div>
-            <div class="balance-amount" class="currentBalance">R$ 0,00</div>
-            <div class="balance-profit" class="profitDisplay"></div>
+            <div class="balance-amount currentBalance">R$ 0,00</div>
+            <div class="balance-profit profitDisplay"></div>
         </div>
 
             <div class="card">
